--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,12 @@ services:
       - "5432:5432"
     env_file:
       - .env
+  backend:
+    build: ./backend
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      - db
+
