--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,22 +10,26 @@
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
+    "@internationalized/date": "^3.11.0",
+    "@lucide/svelte": "^0.561.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tsconfig/svelte": "^5.0.6",
-    "@types/node": "^24.10.10",
+    "@types/node": "^24.10.1",
+    "bits-ui": "^2.15.5",
+    "clsx": "^2.1.1",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.563.0",
-    "radix-ui": "^1.4.3",
-    "tailwind-merge": "^3.4.0",
+    "chart.js": "^4.5.1",
+    "lucide-svelte": "^0.563.0",
+    "svelte-spa-router": "^4.0.1",
     "tailwindcss": "^4.1.18"
   }
 }
