--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -8,19 +8,18 @@
     "types": ["svelte", "vite/client"],
     "noEmit": true,
     /**
-* Typecheck JS in `.svelte` and `.js` files by default.
-* Disable checkJs if you'd like to use dynamic types in JS.
-* Note that setting allowJs false does not prevent the use
-* of JS in `.svelte` files.
-*/
+     * Typecheck JS in `.svelte` and `.js` files by default.
+     * Disable checkJs if you'd like to use dynamic types in JS.
+     * Note that setting allowJs false does not prevent the use
+     * of JS in `.svelte` files.
+     */
     "allowJs": true,
     "checkJs": true,
     "moduleDetection": "force",
-    "baseUrl": ".",
+ "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "$lib": ["./src/lib"],
+      "$lib/*": ["./src/lib/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
