--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,9 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3000:3000"
+      - "3000:80"
+    depends_on:
+      - backend
     env_file:
       - .env
       - ./frontend/.env
